--- a/packages/classic/scss/coloreditor/_variables.scss
+++ b/packages/classic/scss/coloreditor/_variables.scss
@@ -1,5 +1,5 @@
 // Coloreditor/FlatColorPicker
-$coloreditor-spacer: map-get( $spacing, 3 ) !default;
+$coloreditor-spacer: k-map-get( $spacing, 3 ) !default;
 
 $coloreditor-min-width: 272px !default;
 $coloreditor-border-width: 1px !default;
@@ -12,13 +12,13 @@ $coloreditor-text: $component-text !default;
 $coloreditor-border: $component-border !default;
 
 $coloreditor-focus-border: null !default;
-$coloreditor-focus-shadow: 1px 1px 7px 1px rgba(0, 0, 0, .3) !default;
+$coloreditor-focus-shadow: 1px 1px 7px 1px rgba( black, .3 ) !default;
 
 $coloreditor-header-padding-y: $coloreditor-spacer !default;
 $coloreditor-header-padding-x: $coloreditor-header-padding-y !default;
-$coloreditor-header-actions-gap: ( $coloreditor-spacer / 1.5 ) !default;
+$coloreditor-header-actions-gap: k-math-div( $coloreditor-spacer, 1.5 ) !default;
 
-$coloreditor-preview-gap: map-get( $spacing, 1 ) !default;
+$coloreditor-preview-gap: k-map-get( $spacing, 1 ) !default;
 $coloreditor-color-preview-width: 32px !default;
 $coloreditor-color-preview-height: 12px !default;
 
