--- a/packages/classic/scss/notification/_variables.scss
+++ b/packages/classic/scss/notification/_variables.scss
@@ -22,7 +22,7 @@ $notification-border: $component-border !default;
 
     // sass-lint:disable-block indentation
     @each $name, $color in $colors {
-        $_theme: map-merge(( $name: (
+        $_theme: k-map-merge(( $name: (
             color: contrast-wcag( $color ),
             background-color: $color,
             border: $color,
