--- a/packages/classic/scss/captcha/_variables.scss
+++ b/packages/classic/scss/captcha/_variables.scss
@@ -1,5 +1,5 @@
 // Captcha
-$captcha-spacer: map-get( $spacing, 2 ) !default;
+$captcha-spacer: k-map-get( $spacing, 2 ) !default;
 
 $captcha-width: 280px !default;
 $captcha-font-family: $font-family !default;
@@ -14,6 +14,6 @@ $captcha-image-wrap-gap: $captcha-spacer !default;
 
 $captcha-image-controls-gap: $captcha-spacer !default;
 
-$captcha-validation-message-margin-top: $captcha-spacer / 2 !default;
+$captcha-validation-message-margin-top: k-math-div( $captcha-spacer, 2 ) !default;
 $captcha-validation-message-font-size: $font-size-sm !default;
 $captcha-validation-message-font-style: italic !default;
