--- a/packages/classic/scss/chat/_variables.scss
+++ b/packages/classic/scss/chat/_variables.scss
@@ -52,9 +52,9 @@ $chat-border: $app-border !default;
 $chat-bubble-bg: $component-bg !default;
 $chat-bubble-text: $component-text !default;
 $chat-bubble-border: $chat-bubble-bg !default;
-$chat-bubble-shadow: 0 1px 2px rgba( 0, 0, 0, .08) !default;
-$chat-bubble-hover-shadow: 0 1px 2px rgba( 0, 0, 0, .16) !default;
-$chat-bubble-selected-shadow: 0 3px 10px rgba( 0, 0, 0, .16) !default;
+$chat-bubble-shadow: 0 1px 2px rgba( black, .08 ) !default;
+$chat-bubble-hover-shadow: 0 1px 2px rgba( black, .16 ) !default;
+$chat-bubble-selected-shadow: 0 3px 10px rgba( black, .16 ) !default;
 
 $chat-alt-bubble-bg: $primary !default;
 $chat-alt-bubble-text: contrast-wcag( $chat-alt-bubble-bg ) !default;
