--- a/packages/classic/scss/colorgradient/_variables.scss
+++ b/packages/classic/scss/colorgradient/_variables.scss
@@ -1,5 +1,5 @@
 // ColorGradient
-$colorgradient-spacer: map-get( $spacing, 3 ) !default;
+$colorgradient-spacer: k-map-get( $spacing, 3 ) !default;
 
 $colorgradient-width: 272px !default;
 $colorgradient-border-width: 1px !default;
@@ -15,7 +15,7 @@ $colorgradient-text: $component-text !default;
 $colorgradient-border: $component-border !default;
 
 $colorgradient-focus-border: null !default;
-$colorgradient-focus-shadow: 1px 1px 7px 1px rgba(0, 0, 0, .3) !default;
+$colorgradient-focus-shadow: 1px 1px 7px 1px rgba( black, .3 ) !default;
 
 
 $colorgradient-canvas-border-radius: $kendo-border-radius-md !default;
@@ -35,18 +35,18 @@ $colorgradient-draghandle-border-width: 1px !default;
 $colorgradient-draghandle-border-radius: 50% !default;
 $colorgradient-draghandle-bg: transparent !default;
 $colorgradient-draghandle-text: null !default;
-$colorgradient-draghandle-border: rgba( $white, .8) !default;
-$colorgradient-draghandle-shadow: 0 1px 4px rgba(0, 0, 0, .5) !default;
+$colorgradient-draghandle-border: rgba( white, .8) !default;
+$colorgradient-draghandle-shadow: 0 1px 4px rgba( black, .5 ) !default;
 $colorgradient-draghandle-focus-shadow: 0 1px 4px black !default;
 $colorgradient-draghandle-hover-shadow: $colorgradient-draghandle-focus-shadow !default;
 
-$colorgradient-canvas-draghandle-margin-y: -( $colorgradient-draghandle-height / 2 ) !default;
-$colorgradient-canvas-draghandle-margin-x: -( $colorgradient-draghandle-width / 2 ) !default;
+$colorgradient-canvas-draghandle-margin-y: - k-math-div( $colorgradient-draghandle-height, 2 ) !default;
+$colorgradient-canvas-draghandle-margin-x: - k-math-div( $colorgradient-draghandle-width, 2 ) !default;
 
 $colorgradient-input-width: 46px !default;
-$colorgradient-input-gap: ( $colorgradient-spacer / 1.5 ) !default;
-$colorgradient-input-label-gap: ( $colorgradient-spacer / 3 ) !default;
+$colorgradient-input-gap: k-math-div( $colorgradient-spacer, 1.5 ) !default;
+$colorgradient-input-label-gap: k-math-div( $colorgradient-spacer, 3 ) !default;
 $colorgradient-input-label-text: $subtle-text !default;
 
 $colorgradient-contrast-ratio-font-weight: $font-weight-bold !default;
-$colorgradient-contrast-spacer: ( $colorgradient-spacer / 1.5 ) !default;
+$colorgradient-contrast-spacer: k-math-div( $colorgradient-spacer, 1.5 ) !default;
