--- a/packages/classic/scss/grid/_variables.scss
+++ b/packages/classic/scss/grid/_variables.scss
@@ -67,7 +67,7 @@ $grid-footer-border: $grid-header-border !default;
 
 /// Background color of alternating rows in grid
 /// @group grid
-$grid-alt-bg: try-shade( $grid-bg, .5 ) !default;
+$grid-alt-bg: k-try-shade( $grid-bg, .5 ) !default;
 /// Text color of alternating rows in grid
 /// @group grid
 $grid-alt-text: null !default;
@@ -77,7 +77,7 @@ $grid-alt-border: null !default;
 
 /// Background color of hovered rows in grid
 /// @group grid
-$grid-hovered-bg: try-shade( $grid-bg, 1 ) !default;
+$grid-hovered-bg: k-try-shade( $grid-bg, 1 ) !default;
 /// Text color of hovered rows in grid
 /// @group grid
 $grid-hovered-text: null !default;
@@ -95,17 +95,17 @@ $grid-selected-text: null !default;
 /// @group grid
 $grid-selected-border: null !default;
 
-$grid-selected-alt-bg: try-shade( $grid-selected-bg, .5 ) !default;
-$grid-selected-hovered-bg: try-shade( $grid-selected-bg, 1 ) !default;
+$grid-selected-alt-bg: k-try-shade( $grid-selected-bg, .5 ) !default;
+$grid-selected-hovered-bg: k-try-shade( $grid-selected-bg, 1 ) !default;
 
-$grid-grouping-row-bg: try-shade( $grid-bg, 1 ) !default;
+$grid-grouping-row-bg: k-try-shade( $grid-bg, 1 ) !default;
 $grid-grouping-row-text: $grid-text !default;
 
-$grid-sorted-bg: rgba( contrast-wcag( $grid-bg ), .02 ) !default;
+$grid-sorted-bg: rgba( k-contrast-color( $grid-bg ), .02 ) !default;
 $grid-sorting-indicator-text: $primary !default;
 $grid-sorting-index-font-size: $font-size-sm !default;
 $grid-sorting-index-height: $icon-size !default;
-$grid-sorting-index-spacing-y: ($icon-spacing / 2) !default;
+$grid-sorting-index-spacing-y: k-math-div( $icon-spacing, 2 ) !default;
 $grid-sorting-index-spacing-x: -$grid-sorting-index-spacing-y !default;
 
 
@@ -114,7 +114,7 @@ $grid-focused-shadow: $kendo-list-item-focus-shadow !default;
 $grid-edit-cell-padding-x: $grid-cell-padding-x !default;
 $grid-edit-cell-padding-y: 3px !default;
 
-$grid-command-cell-button-spacing: map-get( $spacing, 2 ) !default;
+$grid-command-cell-button-spacing: k-map-get( $spacing, 2 ) !default;
 
 $grid-sticky-bg: $grid-bg !default;
 $grid-sticky-text: $grid-text !default;
@@ -139,7 +139,7 @@ $grid-column-menu-width: 230px !default;
 
 $grid-filter-menu-check-all-border-bottom-width: 1px !default;
 
-$grid-filter-menu-item-spacing-x: map-get( $spacing, 2 ) !default;
+$grid-filter-menu-item-spacing-x: k-map-get( $spacing, 2 ) !default;
 $grid-filter-menu-item-spacing-y: $grid-filter-menu-item-spacing-x !default;
 
 $grid-column-menu-popup-padding-x: null !default;
