--- a/packages/classic/scss/progressbar/_variables.scss
+++ b/packages/classic/scss/progressbar/_variables.scss
@@ -7,14 +7,14 @@ $progressbar-font-family: $font-family !default;
 $progressbar-font-size: $font-size-sm !default;
 $progressbar-line-height: 1 !default;
 
-$progressbar-bg: try-shade( $component-bg, 1 ) !default;
+$progressbar-bg: k-try-shade( $component-bg, 1 ) !default;
 $progressbar-text: $component-text !default;
 $progressbar-border: $component-border !default;
 $progressbar-gradient: null !default;
 
 $progressbar-fill-bg: $primary !default;
 $progressbar-fill-text: contrast-wcag( $progressbar-fill-bg ) !default;
-$progressbar-fill-border: try-shade( $progressbar-fill-bg ) !default;
+$progressbar-fill-border: k-try-shade( $progressbar-fill-bg ) !default;
 $progressbar-fill-gradient: null !default;
 
 $progressbar-indeterminate-bg: $progressbar-bg !default;
