--- a/packages/classic/scss/slider/_variables.scss
+++ b/packages/classic/scss/slider/_variables.scss
@@ -20,17 +20,17 @@ $slider-draghandle-active-size: null !default;
 
 $slider-draghandle-bg: $primary !default;
 $slider-draghandle-text: contrast-wcag( $primary ) !default;
-$slider-draghandle-border: try-shade( $primary, 2 ) !default;
+$slider-draghandle-border: k-try-shade( $primary, 2 ) !default;
 $slider-draghandle-gradient: null !default;
 
-$slider-draghandle-hovered-bg: try-shade( $primary, 1 ) !default;
+$slider-draghandle-hovered-bg: k-try-shade( $primary, 1 ) !default;
 $slider-draghandle-hovered-text: null !default;
-$slider-draghandle-hovered-border: try-shade( $slider-draghandle-hovered-bg, 2 ) !default;
+$slider-draghandle-hovered-border: k-try-shade( $slider-draghandle-hovered-bg, 2 ) !default;
 $slider-draghandle-hovered-gradient: null !default;
 
-$slider-draghandle-pressed-bg: try-shade( $primary, 2 ) !default;
+$slider-draghandle-pressed-bg: k-try-shade( $primary, 2 ) !default;
 $slider-draghandle-pressed-text: null !default;
-$slider-draghandle-pressed-border: try-shade( $slider-draghandle-pressed-bg, 2 ) !default;
+$slider-draghandle-pressed-border: k-try-shade( $slider-draghandle-pressed-bg, 2 ) !default;
 $slider-draghandle-pressed-gradient: null !default;
 
 $slider-draghandle-focused-shadow: 0 0 4px 0 rgba( $slider-draghandle-border, .75 ) !default;
@@ -40,6 +40,6 @@ $slider-transition-function: ease-out !default;
 $slider-draghandle-transition-speed: .4s !default;
 $slider-draghandle-transition-function: cubic-bezier(.25, .8, .25, 1) !default;
 
-$slider-track-bg: try-shade( $component-bg, 1 ) !default;
+$slider-track-bg: k-try-shade( $component-bg, 1 ) !default;
 $slider-selection-bg: $primary !default;
 $slider-disabled-opacity: null !default;
