--- a/packages/classic/scss/tilelayout/_variables.scss
+++ b/packages/classic/scss/tilelayout/_variables.scss
@@ -8,5 +8,5 @@ $tilelayout-hint-border-radius: $kendo-border-radius-lg !default;
 
 $tilelayout-bg: $base-bg !default;
 
-$tilelayout-hint-bg: rgba(255, 255, 255, .2) !default;
+$tilelayout-hint-bg: rgba( white, .2 ) !default;
 $tilelayout-hint-border: $component-border !default;
