--- a/packages/classic/scss/treeview/_variables.scss
+++ b/packages/classic/scss/treeview/_variables.scss
@@ -21,16 +21,16 @@ $kendo-treeview-indent: 16px !default;
 
 /// Horizontal padding of treeview items.
 /// @group treeview
-$kendo-treeview-item-padding-x: map-get( $spacing, 2 ) !default;
-$kendo-treeview-item-padding-x-sm: map-get( $spacing, 2 ) !default;
-$kendo-treeview-item-padding-x-md: map-get( $spacing, 2 ) !default;
-$kendo-treeview-item-padding-x-lg: map-get( $spacing, 3 ) !default;
+$kendo-treeview-item-padding-x: k-map-get( $spacing, 2 ) !default;
+$kendo-treeview-item-padding-x-sm: k-map-get( $spacing, 2 ) !default;
+$kendo-treeview-item-padding-x-md: k-map-get( $spacing, 2 ) !default;
+$kendo-treeview-item-padding-x-lg: k-map-get( $spacing, 3 ) !default;
 /// Vertical padding of treeview items.
 /// @group treeview
-$kendo-treeview-item-padding-y: map-get( $spacing, 1 ) !default;
-$kendo-treeview-item-padding-y-sm: map-get( $spacing, 1 ) - map-get( $spacing, thin ) !default;
-$kendo-treeview-item-padding-y-md: map-get( $spacing, 1 ) !default;
-$kendo-treeview-item-padding-y-lg: map-get( $spacing, 2 ) !default;
+$kendo-treeview-item-padding-y: k-map-get( $spacing, 1 ) !default;
+$kendo-treeview-item-padding-y-sm: k-map-get( $spacing, 1 ) - k-map-get( $spacing, thin ) !default;
+$kendo-treeview-item-padding-y-md: k-map-get( $spacing, 1 ) !default;
+$kendo-treeview-item-padding-y-lg: k-map-get( $spacing, 2 ) !default;
 /// Border width of treeview items.
 /// @group treeview
 $kendo-treeview-item-border-width: 0px !default;
