--- a/packages/classic/scss/window/_variables.scss
+++ b/packages/classic/scss/window/_variables.scss
@@ -1,12 +1,12 @@
 // Window
 $window-border-width: 1px !default;
-$window-border-radius: map-get( $spacing, 1 ) !default;
+$window-border-radius: k-map-get( $spacing, 1 ) !default;
 $window-font-family: $font-family !default;
 $window-font-size: $font-size !default;
 $window-line-height: $line-height !default;
 
-$window-titlebar-padding-x: map-get( $spacing, 3 ) !default;
-$window-titlebar-padding-y: map-get( $spacing, 2 ) !default;
+$window-titlebar-padding-x: k-map-get( $spacing, 3 ) !default;
+$window-titlebar-padding-y: k-map-get( $spacing, 2 ) !default;
 $window-titlebar-border-width: 0 0 1px !default;
 $window-titlebar-border-style: solid !default;
 
@@ -18,8 +18,8 @@ $window-actions-gap: null !default;
 $window-action-opacity: null !default;
 $window-action-hover-opacity: null !default;
 
-$window-inner-padding-x: map-get( $spacing, 3 ) !default;
-$window-inner-padding-y: map-get( $spacing, 3 ) !default;
+$window-inner-padding-x: k-map-get( $spacing, 3 ) !default;
+$window-inner-padding-y: k-map-get( $spacing, 3 ) !default;
 
 $window-buttongroup-padding-x: $actions-padding-x !default;
 $window-buttongroup-padding-y: $actions-padding-y !default;
@@ -34,8 +34,8 @@ $window-titlebar-text: $header-text !default;
 $window-titlebar-border: $header-border !default;
 $window-titlebar-gradient: $header-gradient !default;
 
-$window-shadow: 1px 1px 7px 1px rgba( 0, 0, 0, .12 ) !default;
-$window-focused-shadow: 1px 1px 7px 1px rgba( 0, 0, 0, .25 ) !default;
+$window-shadow: 1px 1px 7px 1px rgba( black, .12 ) !default;
+$window-focused-shadow: 1px 1px 7px 1px rgba( black, .25 ) !default;
 
 $window-sizes: (
     sm: 300px,
