--- a/packages/classic/scss/wizard/_variables.scss
+++ b/packages/classic/scss/wizard/_variables.scss
@@ -11,4 +11,4 @@ $wizard-line-height: $line-height !default;
 $wizard-font-family: $font-family !default;
 
 $wizard-step-border-focused: #656565 !default;
-$wizard-focused-shadow: inset 0 0 0 2px rgba(0, 0, 0, .13) !default;
+$wizard-focused-shadow: inset 0 0 0 2px rgba( black, .13 ) !default;
